--- a/Media Downloader.app/Contents/Info.plist
+++ b/Media Downloader.app/Contents/Info.plist
@@ -26,6 +26,10 @@
     <string>10.13</string>
     <key>NSHumanReadableCopyright</key>
     <string>© 2025 Media Downloader</string>
+    <key>CFBundleIconFile</key>
+    <string>AppIcon</string>
+    <key>CFBundleIconName</key>
+    <string>AppIcon</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>NSPrincipalClass</key>
